--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,7 @@
   .intro {
     img {
       border-radius: 5px;
+      margin-top: 106px;
     }
 
     h2 {
