--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,9 @@
 // Navigation code here
 .main-navigation {
-  background: @nav-bg;
+  position: fixed;
+  width: 100%;
+
+  background: rgba(246, 246, 246, 0.8);
 
   .nav-container {
     .flex(center, center, column);
